--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ejs": "^2.5.2",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jsx": "^0.9.89",
     "morgan": "~1.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -54,6 +55,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.16.2",
